[gd_scene load_steps=6 format=2]

[ext_resource path="res://font/LibreBaskerville-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://script/setting_scene.gd" type="Script" id=2]
[ext_resource path="res://theme/main_theme.tres" type="Theme" id=3]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[node name="Setting" type="Node2D"]
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.25989
margin_right = 1025.15
margin_bottom = 601.0
custom_constants/margin_right = 60
custom_constants/margin_top = 30
custom_constants/margin_left = 60
custom_constants/margin_bottom = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 60.0
margin_top = 30.0
margin_right = 966.0
margin_bottom = 571.0
custom_constants/separation = 21

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 906.0
margin_bottom = 100.0

[node name="RichTextLabel3" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer"]
margin_left = 389.0
margin_right = 517.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
size_flags_vertical = 3
theme = ExtResource( 3 )
text = "OPTIONS"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 121.0
margin_right = 906.0
margin_bottom = 158.0
custom_constants/separation = 20

[node name="ImportSaveButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 443.0
margin_bottom = 37.0
size_flags_horizontal = 3
theme = ExtResource( 3 )
text = "IMPORT_PROGRESS"

[node name="ExportSaveButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 463.0
margin_right = 906.0
margin_bottom = 37.0
size_flags_horizontal = 3
theme = ExtResource( 3 )
text = "EXPORT_PROGRESS"

[node name="ClearProgressButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 179.0
margin_right = 906.0
margin_bottom = 216.0
theme = ExtResource( 3 )
text = "RESET_PROGESS"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
margin_top = 237.0
margin_right = 906.0
margin_bottom = 241.0

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 262.0
margin_right = 906.0
margin_bottom = 322.0

[node name="RichTextLabel4" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 220.0
margin_bottom = 60.0
rect_min_size = Vector2( 220, 0 )
size_flags_vertical = 3
theme = ExtResource( 3 )
text = "MOUSE_SPEED"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 224.0
margin_right = 906.0
margin_bottom = 60.0
size_flags_horizontal = 3

[node name="MouseSpeedSlider" type="HSlider" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_right = 682.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -2.0
max_value = 2.0
step = 0.04

[node name="MouseSpeedText" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_top = 20.0
margin_right = 682.0
margin_bottom = 60.0
rect_min_size = Vector2( 200, 40 )
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center] 1.0 [/center]"
text = " 1.0 "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CustomMusicButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 343.0
margin_right = 906.0
margin_bottom = 380.0
theme = ExtResource( 3 )
text = "CUSTOM_MUSIC"

[node name="RichTextLabel2" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
margin_top = 401.0
margin_right = 906.0
margin_bottom = 483.0
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 504.0
margin_right = 906.0
margin_bottom = 541.0
theme = ExtResource( 3 )
text = "SAVE_AND_BACK"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/ImportSaveButton" to="." method="_on_ImportSaveButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/ExportSaveButton" to="." method="_on_ExportSaveButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ClearProgressButton" to="." method="_on_ClearProgressButton_pressed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/MouseSpeedSlider" to="." method="_on_MouseSpeedSlider_value_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CustomMusicButton" to="." method="_on_CustomMusicButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
